--- a/index.html
+++ b/index.html
@@ -285,35 +285,35 @@
                           <option value="Aguascalientes">Aguascalientes</option>
                           <option value="Baja California">Baja California</option>
                           <option value="Baja California Sur">Baja California Sur</option>
-                          <option value="4">Campeche</option>
-                          <option value="5">Chiapas</option>
-                          <option value="6">Chihuahua</option>
-                          <option value="7">Coahuila</option>
-                          <option value="8">Colima</option>
-                          <option value="9">Distrito Federal</option>
-                          <option value="10">Durango</option>
-                          <option value="11">Estado de Mexico</option>
-                          <option value="12">Guanajuato</option>
-                          <option value="13">Guerrero</option>
-                          <option value="14">Hidalgo</option>
-                          <option value="14">Jalisco</option>
-                          <option value="14">Michoacan</option>
-                          <option value="14">Morelos</option>
-                          <option value="14">Nayarit</option>
-                          <option value="14">Nuevo Leon</option>
-                          <option value="14">Oaxaca</option>
-                          <option value="14">Puebla</option>
-                          <option value="14">Queretaro</option>
-                          <option value="14">Quintana Roo</option>
-                          <option value="14">San Luis Potosi</option>
-                          <option value="14">Sinaloa</option>
-                          <option value="14">Sonora</option>
-                          <option value="14">Tabasco</option>
-                          <option value="14">Tamaulipas</option>
-                          <option value="14">Tlaxccala</option>
-                          <option value="14">Veracruz</option>
-                          <option value="14">Yucatan</option>
-                          <option value="14">Zacatecas</option>
+                          <option value="Campeche">Campeche</option>
+                          <option value="Chiapas">Chiapas</option>
+                          <option value="Chihuahua">Chihuahua</option>
+                          <option value="Coahuila">Coahuila</option>
+                          <option value="Colima">Colima</option>
+                          <option value="Distrito Federal">Distrito Federal</option>
+                          <option value="Durango">Durango</option>
+                          <option value="Estado de Mexico">Estado de Mexico</option>
+                          <option value="Guanajuato">Guanajuato</option>
+                          <option value="Guerrero">Guerrero</option>
+                          <option value="Hidalgo">Hidalgo</option>
+                          <option value="Jalisco">Jalisco</option>
+                          <option value="Michoacan">Michoacan</option>
+                          <option value="Morelos">Morelos</option>
+                          <option value="Nayarit">Nayarit</option>
+                          <option value="Nuevo Leon">Nuevo Leon</option>
+                          <option value="Oaxaca">Oaxaca</option>
+                          <option value="Puebla">Puebla</option>
+                          <option value="Queretaro">Queretaro</option>
+                          <option value="Quintana Roo">Quintana Roo</option>
+                          <option value="San Luis Potosi">San Luis Potosi</option>
+                          <option value="Sinaloa">Sinaloa</option>
+                          <option value="Sonora">Sonora</option>
+                          <option value="Tabasco">Tabasco</option>
+                          <option value="Tamaulipas">Tamaulipas</option>
+                          <option value="Tlaxccala">Tlaxccala</option>
+                          <option value="Veracruz">Veracruz</option>
+                          <option value="Yucatan">Yucatan</option>
+                          <option value="Zacatecas">Zacatecas</option>
                       </select>    
                              <label for="estado">Estado </label>
                      </div>
