--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <img src="/imagenes/nombre-logo.png" alt="" class="nombre-logo">
       </a>
       <ul class="nav nav-a">
-  <li><a href="#home" class="na">INICIO</a></li>
-  <li><a href="#nosotros" class="na">NOSOTROS</a></li>
-  <li><a href="#pronafim" class="na">PRONAFIM</a></li>
-  <li><a href="#apoyo" class="na">APOYO</a></li>
-  <li><a href="#ubicacion" class="na">UBICACION</a></li>
-  <li><a href="#formulario" class="na">FORMULARIO</a></li>
-  <li><a href="#contacto" class="na">CONTACTOS</a></li>
+  <li><a href="#home" class="col-barra">INICIO</a></li>
+  <li><a href="#nosotros" class="col-barra">NOSOTROS</a></li>
+  <li><a href="#pronafim" class="col-barra">PRONAFIM</a></li>
+  <li><a href="#apoyo" class="col-barra">APOYO</a></li>
+  <li><a href="#ubicacion" class="col-barra">UBICACION</a></li>
+  <li><a href="#formulario" class="col-barra">FORMULARIO</a></li>
+  <li><a href="#contacto" class="col-barra">CONTACTOS</a></li>
   </ul>
   </div>
   <section class="banner-area" id="home">
@@ -372,7 +372,7 @@
     </br>
     </section>
 
-    <img src="/imagenes/rosa2.jpg" alt="" class="rosa">
+    <img src="/imagenes/rosa3.png" alt="" class="rosa">
 
     <!-- Optional JavaScript; choose one of the two! -->
 
