--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-lg  ">
+    <nav class="navbar navbar-expand-lg fixed-top ">
       <div class="container-fluid">
         <a class="logo" href="#"> 
           <img src="/imagenes/Logotipo.png" alt="" class="logotipo">
@@ -57,8 +57,6 @@
     </nav>
 
   
-  <section class="banner-area" id="home">
-  </section>
   
     
 
@@ -110,7 +108,9 @@
     </div>
 
     <!-- imagen principal -->
-
+    <section class="banner-area" id="home">
+    </section>
+    <!-- texto principal -->
     <div class="parrafo">
         <pr> TU PRESTAMO EN 24 HRS</pr>
     </br></br>
