--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-lg fixed-top ">
+    <nav class="navbar navbar-expand-xl fixed-top ">
       <div class="container-fluid">
         <a class="logo" href="#"> 
           <img src="/imagenes/Logotipo.png" alt="" class="logotipo">
@@ -28,7 +28,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav my-auto">
+          <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active col-barra0" aria-current="page" href="#">INICIO</a>
             </li>
