--- a/index.html
+++ b/index.html
@@ -125,31 +125,32 @@
             <img src="/imagenes/nosotros.svg" class="nosotros" alt="">
         </div>
         <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6">
-</br>
-<p class="titulo1">Mediante fondeo, CREDICO tiene la capacidad de ejecutar transacciones de cualquier monto.</p>
-</br>
-<p class="titulo1">Nuestros esfuerzos se concentran en buscar empresas con alto potencial de crecimiento, brindando así el máximo retorno a nuestros afiliados.</p>
-</br>
-<p class="titulo1">Creemos en el desarrollo, talento y potencial de México y por ello invertimos en proyectos y empresas Mexicanas socialmente responsables que brinden el más alto beneficio económico y social al país.</p>
-
-</div>
+              </br>
+          <p class="titulo1">Mediante fondeo, CREDICO tiene la capacidad de ejecutar transacciones de cualquier monto.</p>
+              </br>
+          <p class="titulo1">Nuestros esfuerzos se concentran en buscar empresas con alto potencial de crecimiento, brindando así el máximo retorno a nuestros afiliados.</p>
+              </br>
+          <p class="titulo1">Creemos en el desarrollo, talento y potencial de México y por ello invertimos en proyectos y empresas Mexicanas socialmente responsables que brinden el más alto beneficio económico y social al país.</p>
+        </div>
     </div>
 </div>
 </div>  
 </div>  
 </section>
-<!-- NUESTROS SERVICIOS -->
+
+<!-- N U E S T R O S   S E R V I C I O S  -->
+
     <div class="container">
         <div class="card shadow-lg mb-5">
             <div class="card-header"> 
                 <h4 class="text-center">NUESTROS SERVICIOS </h4>
         </div>
         <div class="card-body">
-            <div class="d-flex flex-row">
-                <div class="col-6">
+            <div class="row">
+                <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6">
                     <img src="/imagenes/servicios.svg" class="servicio p-3" alt="">
                 </div>
-        <div class="col-6">
+        <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6">
         </br>
         <p class="titulo1-1">INYECCION DE CAPITAL</p>
         <p class="titulo1">Inyectamos capital privado a empresas y proyectos con alto potencial de crecimiento en cualquier rama.</p>
@@ -165,18 +166,18 @@
         </div>
       </div>
         
-    <!-- PRESTAMOS Y FINANCIAMIENTO -->
+    <!-- P R E S T A  M O  S   Y   F I N A N C I A M I E N T O  -->
     <div class="container">
         <div class="card shadow-lg mb-5">
             <div class="card-header"> 
                 <h4 class="text-center">PRESTAMOS Y FINANCIAMIENTO </h4>
         </div>
         <div class="card-body">
-            <div class="d-flex flex-row">
-                <div class="col-6">
+            <div class="row">
+                <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6">
                     <img src="/imagenes/prestamo.svg" class="nosotros p-3" alt="">
                 </div>
-        <div class="col-6">
+        <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6">
         </br>
         <p class="titulo1">Nadie entiende mejor la necesidad de un préstamo para tu empresa que CREDICO de una manera sencilla y sin complicaciones, ofrecemos soluciones efectivas a tu problemática</p>
     </BR>
@@ -190,14 +191,14 @@
       </div>
 
 
-        <!-- PRESTACIONES -->
+        <!-- P R E S T A C I O N E S  -->
 <section class="pronafim-area" id="pronafim">
 <div class="container">
   <div class="row">
-  <div class="col">
+  <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6">
     <img src="/imagenes/apoyo.svg" alt="" class="nube">
   </div>
-  <div class="col">
+  <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6">
   </br></br></br></br></br></br></br></br></br>
     <p class="prestamoTxt">impulsado por</p>
     <p class="prestamoTxt2">PRONAFIM</p>
@@ -207,11 +208,12 @@
 </div>
 </div>
 </section>
-<!-- APOYO -->
+
+<!--  A P O Y O  -->
 <section class="apoyo-area" id="apoyo">
 <div class="container">
   <div class="row">
-    <div class="col">
+    <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6">
       <p class="titulo10"></BR></BR></BR>
         -Apoyo a madres solteras/mujer emprendedora</BR></BR>
         -Becas estudiantes </BR></BR>
@@ -220,20 +222,21 @@
         -Acceso al fondo de credito 
       </p>
     </div>
-  <div class="col">
+  <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6">
 <img src="/imagenes/casa.svg" alt="" class="casa" >
   </div>
   </div>
 </div>
 </section>
-        <!-- UBICACION -->
+
+<!--  U B I C A C I O N  -->
         <section class="ubicacion-area" id="ubicacion">
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6">
                     <img src="/imagenes/localizacion2.svg" alt="" class="ubicacion">
                 </div>
-                <div class="col">
+                <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6">
                     <p class="titulo5">
                     </Br></Br></Br> </Br> </Br> </Br> </Br> 
                         Estamos muy cerca de ti </p>
